Refactor report resources (operational risk, violations, vulnerabilities, licenses), Added exposures report resource

--- a/templates/resources/operational_risk_policy.md.tmpl
+++ b/templates/resources/operational_risk_policy.md.tmpl
@@ -18,6 +18,8 @@ Creates an Xray policy using V2 of the underlying APIs. Please note: It's only c
 
 Import is supported using the following syntax:
 
+The [`terraform import` command](https://developer.hashicorp.com/terraform/cli/commands/import) can be used, for example:
+
 ```shell
 terraform import xray_operational_risk_policy.my-policy policy-name
 ```
