--- a/templates/resources/security_policy.md.tmpl
+++ b/templates/resources/security_policy.md.tmpl
@@ -24,6 +24,8 @@ Please note: It's only compatible with Bearer token auth method (Identity and Ac
 
 Import is supported using the following syntax:
 
+The [`terraform import` command](https://developer.hashicorp.com/terraform/cli/commands/import) can be used, for example:
+
 ```sh
 terraform import xray_security_policy.my-policy policy-name
 ```
