--- a/templates/resources/settings.md.tmpl
+++ b/templates/resources/settings.md.tmpl
@@ -20,6 +20,10 @@ Provides an Xray resource for managing basic settings and DB Sync Time.
 
 ## Import
 
+Import is supported using the following syntax:
+
+The [`terraform import` command](https://developer.hashicorp.com/terraform/cli/commands/import) can be used, for example:
+
 Settings can be imported using the DB sync time as the ID, e.g.
 ```
 $ terraform import xray_settings.my-settings 00:00
