--- a/templates/resources/watch.md.tmpl
+++ b/templates/resources/watch.md.tmpl
@@ -23,6 +23,8 @@ Provides an Xray Watch resource.
 
 Import is supported using the following syntax:
 
+The [`terraform import` command](https://developer.hashicorp.com/terraform/cli/commands/import) can be used, for example:
+
 ```sh
 terraform import xray_watch.my-watch watch-name
 ```
